<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/module_login_white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/module_login_please_input_code"
        android:textColor="@color/module_login_gray_333"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCodeTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/module_login_verification_code_send_tips"
        android:textColor="@color/module_login_gray_888"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <TextView
        android:id="@+id/textViewPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/module_login_verification_code_send_to"
        android:textColor="@color/module_login_gray_888"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/textViewCodeTips"
        app:layout_constraintStart_toEndOf="@+id/textViewCodeTips"
        app:layout_constraintTop_toTopOf="@+id/textViewCodeTips" />

    <com.yunfeng.module_base.view.SeparatedEditText
        android:id="@+id/editTextVerificationCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="number"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        app:blockSpacing="10dp"
        app:borderColor="@color/lightGrey"
        app:maxLength="6"
        app:highLightBefore="true"
        app:highLightEnable="true"
        app:highlightColor="@color/orange_ffa800"
        app:separateType="type_underline"
        app:cursorColor="@color/orange_ffa800"
        app:showKeyboard="false"
        app:textColor="@color/orange_ffa800"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/textViewCodeTips" />


    <TextView
        android:id="@+id/textViewWaitCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/module_login_wait_regain_verification_code"
        android:textColor="@color/orange_ffa800"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@id/editTextVerificationCode"
        app:layout_constraintTop_toBottomOf="@id/editTextVerificationCode" />

    <Button
        android:id="@+id/buttonConfirm"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/module_base_bg_btn_stroke_accent_20dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:text="@string/module_login_regain_verification_code"
        android:textColor="@color/orange_ffa800"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextVerificationCode" />


</androidx.constraintlayout.widget.ConstraintLayout>

