<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageButton
        android:id="@+id/imageButtonClose"
        android:padding="5dp"
        android:background="@null"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/module_login_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ImageButton>


    <TextView
        android:layout_marginTop="195dp"
        android:id="@+id/tvSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/module_base_app_slogan"
        android:textColor="@color/gray_888"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_phone_code_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@id/line"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="50dp"
        android:layout_below="@id/tvSlogan"
        android:padding="5dp"
        android:text="@string/module_login_with_phone_code"
        android:textColor="@color/gray_888"
        android:textSize="12sp" />

    <View
        android:id="@+id/line"
        android:layout_width="0.5dp"
        android:layout_height="11dp"
        android:layout_alignBottom="@id/tv_phone_code_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:background="@color/gray_888"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_phone_password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:layout_toStartOf="@id/line"
        android:padding="5dp"
        android:text="@string/module_login_with_password"
        android:textColor="@color/gray_888"
        android:textSize="12sp"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_phone_password_login" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:layout_alignBottom="@+id/tv_title"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="8dp"
        android:layout_toStartOf="@+id/tv_title"
        android:background="@color/module_login_light_gray"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageViewWXLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:text="@string/module_login_third"
        android:textColor="@color/module_login_gray_666"
        android:textSize="12sp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1px"
        android:layout_alignBottom="@+id/tv_title"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="8dp"
        android:layout_toEndOf="@+id/tv_title"
        android:background="@color/module_login_light_gray"
        tools:visibility="visible"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/imageViewWXLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewLoginWX"
        android:layout_marginEnd="43dp"
        android:layout_toStartOf="@id/line"
        android:clickable="true"
        android:focusable="true"
        tools:visibility="visible"
        android:src="@drawable/module_login_ic_wechat"
        android:visibility="gone" />

    <ImageView
        tools:visibility="visible"
        android:id="@+id/imageViewQQLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewLoginQQ"
        android:layout_marginStart="43dp"
        android:layout_toEndOf="@id/line"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/module_login_ic_qq"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewWXLogin"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/textViewLoginWX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageViewWXLogin"
        android:layout_alignEnd="@+id/imageViewWXLogin"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/module_login_wechat"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/textViewLoginQQ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageViewQQLogin"
        android:layout_alignEnd="@+id/imageViewQQLogin"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/module_login_qq"
        tools:visibility="visible"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        android:visibility="gone" />
</RelativeLayout>